--- a/html/sales.html
+++ b/html/sales.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="../css/sales.css" />
 </head>
-<body id="myBody"></body>
-  <h1>Hello World
-  </h1>
+<body id="myBody">
+  <table id="store-table">
+  </table>
 </body>
 <script src="../js/app.js"></script>
 </html>
