With CSS styling

--- a/html/sales.html
+++ b/html/sales.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" type="text/css" media="screen" href="../css/sales.css" />
 </head>
 <body id="my-body">
+  <center><h1>Salmon Cookies Sales by Location</h1><p>To add a new store to the sales projections or to update an existing store's sales projections , please fill out the form below.</p></center>
+  
   <table id="store-table">
   </table>
   <fieldset>
@@ -23,6 +25,7 @@
       <button type="submit">Submit</button>
     </form>
   </fieldset>
+  <a href='../index.html'><button>Store Page</button></a>
 </body>
 <script src="../js/app.js"></script>
 </html>
